# handler/endpoints.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 
 	"github.com/SawitProRecruitment/UserService/generated"
+	"github.com/SawitProRecruitment/UserService/utils"
 	"github.com/labstack/echo/v4"
 
 	"golang.org/x/crypto/bcrypt"
@@ -24,7 +25,6 @@ func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
 func (s *Server) PostRegistration(ctx echo.Context) error {
 
 	var request generated.PostRegistrationJSONBody
-	var context context.Context
 
 	if err := ctx.Bind(&request); err != nil {
 		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request data"})
@@ -47,19 +47,76 @@ func (s *Server) PostRegistration(ctx echo.Context) error {
 	}
 
 	// Hash the password before storing it in the database
-	hashedPassword, err := bcrypt.GenerateFromPassword([]byte("request.Password"), bcrypt.DefaultCost)
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(request.Password), bcrypt.DefaultCost)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Internal server error"})
 	}
 
-	// Store the user in the database (models.CreateUser should be implemented)
-	userID, err := s.Repository.RegisterUser(context, request.PhoneNumber, request.FullName, string(hashedPassword))
+	fmt.Println(request.PhoneNumber, "------------", request.FullName, "---------------", string(hashedPassword), "----------------", s)
+	userID, err := s.Repository.RegisterUser(context.Background(), request.PhoneNumber, request.FullName, string(hashedPassword))
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to create user"})
 	}
 
 	// Return the user ID as a response
 	return ctx.JSON(http.StatusOK, map[string]int{"user_id": userID})
+}
+
+// GetProfile retrieves the user's profile
+func (s *Server) GetProfile(c echo.Context) error {
+	// Get the user ID from the JWT token
+	var (
+		userID int
+		err    error
+	)
+	if userID, err = utils.GetUserIDFromToken(c); err != nil {
+		return err
+	}
+
+	// Get the user's profile information
+	fullName, phoneNumber, err := s.Repository.GetMyProfile(context.Background(), userID)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to fetch profile"})
+	}
+
+	// Return the user's profile information
+	return c.JSON(http.StatusOK, map[string]interface{}{"fullName": fullName, "phoneNumber": phoneNumber})
+}
+
+// PutProfile updates the user's profile
+func (s *Server) PutProfile(c echo.Context) error {
+
+	var (
+		userID int
+		err    error
+		req    generated.PutProfileJSONRequestBody
+	)
+	// Get the user ID from the JWT token
+	if userID, err = utils.GetUserIDFromToken(c); err != nil {
+		return err
+	}
+
+	// Parse the request body into an UpdateProfileRequest struct
+	if err := c.Bind(req); err != nil {
+		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request"})
+	}
+
+	// Validate the update profile request
+	if err := c.Validate(req); err != nil {
+		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Validation failed"})
+	}
+
+	// Check if the provided phone number exists for another user
+	if _, _, err := s.Repository.GetMyProfile(context.Background(), userID, req.PhoneNumber); err != nil {
+		return c.JSON(http.StatusConflict, map[string]string{"error": "Phone number already exists for another user"})
+	}
+
+	if err := s.Repository.UpdateMyProfile(context.Background(), userID, req.PhoneNumber, req.FullName); err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to update profile"})
+	}
+
+	// Return a success response
+	return c.JSON(http.StatusOK, map[string]string{"message": "Profile updated successfully"})
 }
 
 // (POST /login)
@@ -71,6 +128,23 @@ func (s *Server) PostLogin(ctx echo.Context) error {
 	if err := ctx.Bind(&req); err != nil {
 		return err
 	}
-	fmt.Println(req.Password, "User Login", req.PhoneNumber)
-	return ctx.JSON(http.StatusOK, req)
+	// Validate the login request
+	if err := ctx.Validate(req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Validation failed"})
+	}
+
+	// Check if the provided phone number and password match a user in the database
+	userID, err := s.Repository.LoginUser(context.Background(), req.PhoneNumber, req.Password)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Login failed"})
+	}
+
+	// Generate a JWT token for the user
+	jwtToken, err := utils.GenerateJWTToken(userID)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to generate JWT token"})
+	}
+
+	// Return the user ID and JWT token
+	return ctx.JSON(http.StatusOK, map[string]interface{}{"userId": userID, "jwtToken": jwtToken})
 }
